<?xml version="1.0" encoding="utf-8"?><!--

  This file is subject to the terms and conditions defined in
  file 'LICENSE', which is part of this source code package

  Autor: Felipe González
  Email: felipe.gonzalezalarcon94@gmail.com

  Copyright (c) 2024

  Last modified 09-11-24, 20:50
  -->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.MainActivity"
    tools:keep="@layout/activity_main">

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_view_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.45"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/main_card_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:translationY="-20dp"
                android:translationZ="-2dp"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guia_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia_botones"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.32"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia_central"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_0"
                app:layout_constraintEnd_toStartOf="@+id/guia_central"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guia_botones" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guia_central"
                app:layout_constraintTop_toTopOf="@+id/guia_botones" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_2"
                app:layout_constraintEnd_toEndOf="@+id/btn_evalua_0"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btn_evalua_0"
                app:layout_constraintTop_toBottomOf="@+id/btn_evalua_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_3"
                app:layout_constraintEnd_toEndOf="@+id/btn_evalua_1"
                app:layout_constraintStart_toStartOf="@+id/btn_evalua_1"
                app:layout_constraintTop_toBottomOf="@+id/btn_evalua_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_4"
                app:layout_constraintEnd_toEndOf="@+id/btn_evalua_2"
                app:layout_constraintStart_toStartOf="@+id/btn_evalua_2"
                app:layout_constraintTop_toBottomOf="@+id/btn_evalua_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_5"
                app:layout_constraintEnd_toEndOf="@+id/btn_evalua_3"
                app:layout_constraintStart_toStartOf="@+id/btn_evalua_3"
                app:layout_constraintTop_toBottomOf="@+id/btn_evalua_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_6"
                app:layout_constraintEnd_toEndOf="@+id/btn_evalua_4"
                app:layout_constraintStart_toStartOf="@+id/btn_evalua_4"
                app:layout_constraintTop_toBottomOf="@+id/btn_evalua_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_7"
                android:transitionName="btn_evalua_7"
                app:layout_constraintEnd_toEndOf="@+id/btn_evalua_5"
                app:layout_constraintStart_toStartOf="@+id/btn_evalua_5"
                app:layout_constraintTop_toBottomOf="@+id/btn_evalua_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_8"
                app:layout_constraintEnd_toEndOf="@+id/btn_evalua_6"
                app:layout_constraintStart_toStartOf="@+id/btn_evalua_6"
                app:layout_constraintTop_toBottomOf="@+id/btn_evalua_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_9"
                app:layout_constraintEnd_toEndOf="@+id/btn_evalua_7"
                app:layout_constraintStart_toStartOf="@+id/btn_evalua_7"
                app:layout_constraintTop_toBottomOf="@+id/btn_evalua_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_evalua_10"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="@dimen/padding_button_green"
                android:text="@string/EVALUA_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_evalua_9"
                app:layout_constraintStart_toStartOf="@+id/btn_evalua_8"
                app:layout_constraintTop_toBottomOf="@+id/btn_evalua_8"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_nombre_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:text="@string/EVALUA_TOOL"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/colorOnPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo_app" />

            <ImageView
                android:id="@+id/iv_logo_app"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_8"
                android:contentDescription="@string/ICONO_LOGO_APP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_settings"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintBottom_toTopOf="@+id/guia_botones"
                app:layout_constraintEnd_toEndOf="@+id/tv_nombre_app"
                app:layout_constraintStart_toStartOf="@+id/tv_nombre_app"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombre_app"
                app:layout_constraintVertical_bias="0.0"
                tools:text="v1.0.0" />

            <include
                android:id="@+id/include_switch"
                layout="@layout/switch_modo_noche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/iv_settings"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_settings" />

            <ImageButton
                android:id="@+id/iv_settings"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_8"
                android:background="?attr/actionBarItemBackground"
                android:clickable="true"
                android:contentDescription="@string/configuracion"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_round_settings_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
